feat: Update VSCode settings and add Deno reference in setup file

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,4 +4,5 @@
         "./supabase/functions"
     ],
     "deno.importMap": "./supabase/functions/import_map.json",
+    "postman.settings.dotenv-detection-notification-visibility": false,
 }
